tenzir/tests/exec/operators/from/invalid_scheme.tql
// error: true

from "scheme://foo.json"
